// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="button"
>
  Hi 
  Save
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="button"
>
  Hi 
  Click Me, Please
</div>
`;
